<resources>
    <string name="app_name">BetterDose</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_underlined"><u>Sign up</u></string>
    <string name="or_sign_in_with_google">Or sign in with Google</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="better_dose">BetterDose</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_underlined"><u>Log in</u></string>
    <string name="sign_in">Sign in</string>
    <string name="flashcards_logo">BetterDose logo</string>
    <string name="password_repetition">Confirm password</string>
    <string name="fullName">Full name</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="interactions">Interactions</string>
    <string name="diary">Diary</string>
    <string name="caution">Caution</string>
    <string name="purpose">Purpose</string>
    <string name="description">Description</string>
    <string name="invalid_email_or_password">Login failed, invalid email or password</string>
    <string name="basic_information">Basic information</string>
    <string name="member_since">Member since:</string>
    <string name="medicine_prescription">Medicine prescription</string>
    <string name="sign_out">Sign out</string>
    <string name="dosage">Dosage</string>
    <string name="medicine">Medicine</string>
    <string name="remove">Remove</string>
    <string name="hello_comma">Hello,</string>
    <string name="my_medication_for">My medication for</string>
    <string name="text_view_4">The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: "Client", "You" and "Your" refers to you, the person log on this website and compliant to the Company’s terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.</string>
    <string name="text_view_6">We employ the use of cookies. By accessing BetterDose, you agreed to use cookies in agreement with the BetterDose Privacy Policy.</string>
    <string name="text_view_7">Most interactive websites use cookies to let us retrieve the user’s details for each visit. Cookies are used by our website to enable the functionality of certain areas to make it easier for people visiting our website. Some of our affiliate/advertising partners may also use cookies.</string>
    <string name="text_view_cookies">Cookies</string>
    <string name="text_view_license">License</string>
    <string name="text_view_9">Unless otherwise stated, BetterDose and/or its licensors own the intellectual property rights for all material on BetterDose. All intellectual property rights are reserved. You may access this from BetterDose for your own personal use subjected to restrictions set in these terms and conditions.</string>
    <string name="text_view_10">You must not:</string>
    <string name="text_view_11"> - Republish material from BetterDose</string>
    <string name="text_view_12"> - Sell, rent or sub-license material from BetterDose</string>
    <string name="text_view_13">- Reproduce, duplicate or copy material from BetterDose</string>
    <string name="text_view_14">- Redistribute content from BetterDose</string>
    <string name="text_view_15">This Agreement shall begin on the date hereof. Our Terms and Conditions were created with the help of the Terms And Conditions Generator.</string>
    <string name="text_view_16">Parts of this website offer an opportunity for users to post and exchange opinions and information in certain areas of the website. BetterDose does not filter, edit, publish or review Comments prior to their presence on the website. Comments do not reflect the views and opinions of BetterDose,its agents and/or affiliates. Comments reflect the views and opinions of the person who post their views and opinions. To the extent permitted by applicable laws, BetterDose shall not be liable for the Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this website.</string>
    <string name="text_view_17">BetterDose reserves the right to monitor all Comments and to remove any Comments which can be considered inappropriate, offensive or causes breach of these Terms and Conditions.</string>
    <string name="text_view_18">You warrant and represent that:</string>
    <string name="text_view_19">- You are entitled to post the Comments on our website and have all necessary licenses and consents to do so;</string>
    <string name="text_view_20">- The Comments do not invade any intellectual property right, including without limitation copyright, patent or trademark of any third party;</string>
    <string name="text_view_21">- The Comments do not contain any defamatory, libelous, offensive, indecent or otherwise unlawful material which is an invasion of privacy</string>
    <string name="text_view_22">- The Comments will not be used to solicit or promote business or custom or present commercial activities or unlawful activity.</string>
    <string name="text_view_23">You hereby grant BetterDose a non-exclusive license to use, reproduce, edit and authorize others to use, reproduce and edit any of your Comments in any and all forms, formats or media.</string>
    <string name="text_hyperlinking">Hyperlinking to our Content</string>
    <string name="text_view_25">The following organizations may link to our Website without prior written approval:</string>
    <string name="text_view_26">- Government agencies;</string>
    <string name="text_view_27">- Search engines;</string>
    <string name="text_view_28">- News organizations;</string>
    <string name="text_view_29">- Online directory distributors may link to our Website in the same manner as they hyperlink to the Websites of other listed businesses; and</string>
    <string name="text_view_30">- System wide Accredited Businesses except soliciting non-profit organizations, charity shopping malls, and charity fundraising groups which may not hyperlink to our Web site.</string>
    <string name="text_view_31">These organizations may link to our home page, to publications or to other Website information so long as the link: (a) is not in any way deceptive; (b) does not falsely imply sponsorship, endorsement or approval of the linking party and its products and/or services; and (c) fits within the context of the linking party’s site.</string>
    <string name="text_view_32">We may consider and approve other link requests from the following types of organizations:</string>
    <string name="text_view_33">- commonly-known consumer and/or business information sources;</string>
    <string name="text_view_34">- dot.com community sites;</string>
    <string name="text_view_35">- associations or other groups representing charities;</string>
    <string name="text_view_36">- online directory distributors;</string>
    <string name="text_view_37">- internet portals;</string>
    <string name="text_view_38">- accounting, law and consulting firms; and</string>
    <string name="text_view_39">- educational institutions and trade associations.</string>
    <string name="text_view_40">We will approve link requests from these organizations if we decide that: (a) the link would not make us look unfavorably to ourselves or to our accredited businesses; (b) the organization does not have any negative records with us; (c) the benefit to us from the visibility of the hyperlink compensates the absence of BetterDose; and (d) the link is in the context of general resource information.</string>
    <string name="text_view_41">These organizations may link to our home page so long as the link: (a) is not in any way deceptive; (b) does not falsely imply sponsorship, endorsement or approval of the linking party and its products or services; and (c) fits within the context of the linking party’s site.</string>
    <string name="text_view_42">If you are one of the organizations listed in paragraph 2 above and are interested in linking to our website, you must inform us by sending an e-mail to BetterDose. Please include your name, your organization name, contact information as well as the URL of your site, a list of any URLs from which you intend to link to our Website, and a list of the URLs on our site to which you would like to link. Wait 2-3 weeks for a response.</string>
    <string name="text_view_43">Approved organizations may hyperlink to our Website as follows:</string>
    <string name="text_view_44">- By use of our corporate name; or</string>
    <string name="text_view_45">- By use of the uniform resource locator being linked to; or</string>
    <string name="text_view_46">"- By use of any other description of our Website being linked to that makes sense within the context and format of content on the linking party’s site. "</string>
    <string name="text_view_47">"No use of BetterDose's logo or other artwork will be allowed for linking absent a trademark license agreement. "</string>
    <string name="text_view_iFrames">iFrames</string>
    <string name="text_view_49">"Without prior approval and written permission, you may not create frames around our Webpages that alter in any way the visual presentation or appearance of our Website. "</string>
    <string name="text_view_content_liability">Content Liability</string>
    <string name="text_view_51">"We shall not be hold responsible for any content that appears on your Website. You agree to protect and defend us against all claims that is rising on your Website. No link(s) should appear on any Website that may be interpreted as libelous, obscene or criminal, or which infringes, otherwise violates, or advocates the infringement or other violation of, any third party rights. "</string>
    <string name="text_view_privacy_policy">Privacy Policy</string>
    <string name="text_view_reservation">Reservation of Rights</string>
    <string name="text_view_53">"We reserve the right to request that you remove all links or any particular link to our Website. You approve to immediately remove all links to our Website upon request. We also reserve the right to amen these terms and conditions and it’s linking policy at any time. By continuously linking to our Website, you agree to be bound to and follow these linking terms and conditions. "</string>
    <string name="removal_of_links_from_our_website">Removal of links from our website</string>
    <string name="text_view_55">"If you find any link on our Website that is offensive for any reason, you are free to contact and inform us any moment. We will consider requests to remove links but we are not obligated to or so or to respond to you directly. "</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Conditions </u></string>
    <string name="visit_our_website"><u>Visit our website</u></string>
</resources>