<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_login_register_container"
    tools:context=".fragments.RegisterFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.BetterDose.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_input_layout_bottom_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullName"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.BetterDose.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_input_layout_bottom_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        style="@style/Widget.BetterDose.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="@dimen/text_input_layout_bottom_margin"
        app:errorEnabled="true">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:nextFocusDown="@id/etPasswordRepetition" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_repetition_text_input"
        style="@style/Widget.BetterDose.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="@dimen/text_input_layout_bottom_margin"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordRepetition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_repetition"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_terms_and_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_terms_and_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:checked="false" />

        <TextView
            android:id="@+id/tv_terms_and_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/i_agree_to_the_terms_and_condition"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/Widget.BetterDose.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="5dp"
        android:text="@string/register"
        android:textColor="#fff" />
</LinearLayout>