<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/padding_login_register_container"
    tools:context=".fragments.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.BetterDose.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_input_layout_bottom_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/etPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.BetterDose.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_input_layout_bottom_margin"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:nextFocusDown="@id/btnLogin" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.BetterDose.Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="@dimen/text_input_layout_bottom_margin"
        android:text="Sign in"
        android:textColor="#fff"
        app:icon="@drawable/ic_baseline_mail_outline_24"
        app:iconTint="@android:color/white" />

    <TextView
        android:id="@+id/tv_visit_our_website"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit_our_website"
        android:textSize="16sp"
        android:textColor="@color/primaryColor"
        android:layout_gravity="center"/>


</LinearLayout>
