<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/container_padding">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tv_bottom_margin"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/basic_information"
                android:textSize="25dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/card_margin_horizontal"
                android:layout_marginBottom="5dp"
                android:background="@android:color/white"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                app:contentPadding="@dimen/card_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_profile_pic"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginBottom="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_person" />

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/et_text_size"
                        tools:text="Franko Papić" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/et_text_size"
                        android:layout_marginTop="5dp"
                        tools:text="frankopapic@gmail.com" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/member_since"
                            android:textSize="@dimen/et_text_size" />

                        <TextView
                            android:id="@+id/tv_date_joined"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/et_text_size"
                            tools:text="13.3.2021." />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/tv_bottom_margin"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="Allergies"
                android:textSize="20dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/card_margin_horizontal"
                android:layout_marginBottom="180dp"
                android:background="@android:color/white"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                app:contentPadding="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAlergies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:scrollbarStyle="outsideInset"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_marginTop="1dp"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Button
            android:id="@+id/btn_delete_account"
            android:background="@drawable/button_round_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delete my account and data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_sign_out"
            android:background="@drawable/button_round_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/btn_delete_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_add_alergie"
            android:background="@drawable/button_round_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ADD ALLERGY"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_out"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

